Switch from support ubuntu to supporting centos 7 (would have been better to if it)

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,3 +3,5 @@
   action: service name=consul state=restarted
 - name: restart dnsmasq
   service: name=dnsmasq state=restarted enabled=yes
+- name: systemctl reload
+  command: systemctl daemon-reload
