--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,11 +1,6 @@
 ---
-- name: update apt
-  apt: >
-    update_cache=yes
-    cache_valid_time=3600
-
 - name: install deps
-  apt: >
+  yum: >
     pkg={{item}}
     state=installed
   with_items:
@@ -72,13 +67,16 @@
     recurse=yes
   when: consul_was_downloaded|changed
 
-- name: copy consul upstart script
+- name: copy consul systemd unitfile
   template: >
-    src=consul.conf.j2
-    dest=/etc/init/consul.conf
+    src=consul.service.j2
+    dest=/etc/systemd/system/consul.service
     owner={{consul_user}}
     group={{consul_group}}
     mode=0755
+  notify: systemctl reload
+
+- meta: flush_handlers
 
 - name: add consul to path through profile.d
   template: >
