--- a/tasks/install-ui.yml
+++ b/tasks/install-ui.yml
@@ -1,4 +1,4 @@
-- name: download consul
+- name: download consul ui
   get_url: >
     url={{consul_ui_download}}
     dest={{consul_download_folder}}
@@ -23,32 +23,19 @@
 - name: consul nginx config
   template: >
     src=consul-nginx.conf.j2
-    dest=/etc/nginx/sites-available/consul
+    dest=/etc/nginx/conf.d/consul.conf
     owner=root
     group=root
     mode=0755
-  when: consul_is_ui
   notify:
-    - restart nginx  
-
-- name: consul nginx config
-  file: >
-    state=link
-    src=/etc/nginx/sites-available/consul
-    path=/etc/nginx/sites-enabled/consul
-    owner=root
-    group=root
-    mode=0755
-  when: consul_is_ui and consul_enable_nginx_config
-  notify:
-  - restart nginx
+    - Restart nginx
 
 - name: create nginx home
   file: >
     state=directory
-    path=/var/www/consul/htdocs
+    path=/srv/sites/consul/htdocs
     owner=root
     group=root
     mode=0755
   notify:
-    - restart nginx
+    - Restart nginx
